<resources>
    <string name="app_name">Splasscreen</string>
    <string name="go_to_fragment">Go to Fragment</string>
    <string name="go_to_activity">Go to Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="hello_fragment1">Hallo ini dari fragment 1</string>
    <string name="hello_fragment2">Hallo ini dari fragment 2</string>
    <string name="adduser">add user</string>
    <string name="userlist">User List</string>
    <string name="frg1">Fragment 1</string>
    <string name="frg2">Fragment 2</string>
    <string name="textactivity">Ini dari activity lain</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
